src/css/doc.css
/* 文档默认style */
.navbar__logo {
    height: 30px;
    margin-right: 0;
    display: flex;
    justify-content: center;
    align-items: center;
}

.navbar__logo img {
    margin-top: -8px;
    height: 100%;
}

.markdown li {
    list-style: unset;
}

.menu__link--active {
    color: #6aa700 !important;
    font-weight: 600 !important;
}

.ant-select-item-option-active {
    opacity: 1;
    background-color: #74bc1f !important;
}

.footer {
    background-color: #090909 !important;
}

.footer_box {
    background-color: #090909 !important;
}

.theme-doc-sidebar-item-category-level-1 {
    border-left: 1.5px solid #000;
}

.theme-doc-sidebar-item-category-level-2 {
    border-left: 1.5px solid #666;
}

.menu__list-item--collapsed {
    border: none;
}

.theme-doc-sidebar-item-category-level-3 {
    border-left: 1.5px solid #ccc;
}

.menu__link--active {
    font-weight: 600;
}

.menu__list-item--collapsed {
    border: none;
}

.menu [tabindex="0"] {
    font-weight: 400;
    font-size: 15px;
    line-height: 22px;
    color: #999999;
}

.navbar__inner {
    margin: 0 auto;
}

/* 文档自定义style */
.gpio_style>table {
    overflow: visible;
}

.gpio_style>table td {
    padding: 3px 5px;
    font-size: 12px;
}

.green {
    background-color: green;
    color: #fff;
}

.black {
    color: #fff;
    background-color: black;
}

.blue {
    color: #fff;
    background-color: blue;
}

.yellow {
    color: #000;
    background-color: yellow;
}

.red {
    color: #000;
    background-color: red;
}

.orange {
    color: #000;
    background-color: orange;
}

.container img {
    display: block;
    margin: 0 auto;
}

.hidden {
    display: none !important;
}

/* 重置计数器 */
.container article {
    counter-reset: h2;
}

/* 二级标题 */
.container h2 {
    counter-reset: h3;
    position: relative;
    padding-left: 2.5rem;
}

.container h2::before {
    counter-increment: h2;
    content: counter(h2) ". ";
    position: absolute;
    left: 0;
    font-weight: bold;
}

/* 三级标题 - 基础样式 */
.container h3 {
    counter-reset: h4;
    position: relative;
    padding-left: 2.5rem;
    /* 默认缩进 */
}

/* 从第10个三级标题开始增加缩进 */
.container h3:nth-of-type(n+10) {
    padding-left: 3.5rem;
    /* 更大缩进 */
}

.container h3::before {
    counter-increment: h3;
    content: counter(h2) "." counter(h3);
    position: absolute;
    left: 0;
    font-weight: bold;
}

.container .text--truncate {
    padding: 0;
}

.container .text--truncate::before {
    content: none;
}

@media screen and (max-width: 750px) {
    .navbar {
        height: 3.5rem;
    }

    .navbar__inner {
        height: 100%;
    }
}

